<resources>
    <string name="app_name">ViewTesting</string>
    <string name="b_news1">နိုင်ငံတော်၏ အတိုင်ပင်ခံပုဂ္ဂိုလ် ဒေါ်အောင်ဆန်းစုကြည်နှင့် တရုတ်သမ္မတ ရှီကျင်ပင်း ဦးဆောင်သည့် ကိုယ်စားလှယ်အဖွဲ့ တွေ့ဆုံပြီး နှစ်နိုင်ငံ ထိပ်သီးဆွေးနွေးပွဲကျင်းပ ထုိ႔ျပင္ ေမးျမန္းသူ၏ ေမတၱာရပ္ခံခ်က္အရ ယင္းေတြ႕ဆုံေမးျမန္းမႈကို တယ္လီဖုန္းမွတစ္ဆင့္ ေျဖၾကားေပးခဲ့ၿပီး ေမးျမန္းသူအေနျဖင့္ ျမန္မာ-အစၥေရးအၾကား လက္နက္ေရာင္းခ် ၀ယ္ယူမႈဆိုင္ရာ ဆက္ဆံေရးမ်ားႏွင့္ စပ္လ်ဥ္း၍လည္း ေမးခြန္းမ်ား ျပဳလုပ္ခဲ့ေၾကာင္း ျမန္မာသံ႐ုံး၏ ရွင္းလင္းခ်က္တြင္ ပါရွိသည္။
ထို႔ေနာက္ အဂၤလိပ္ဘာသာျဖင့္ ျပဳလုပ္ခဲ့သည့္ ယင္းအေမးအေျဖမ်ားကို အစီအစဥ္ တင္ဆက္သူႏွစ္ဦးက ဟီးဘ႐ူးဘာသာသို႔ ျပန္ဆိုကာ ခုနစ္မိနစ္ၾကာ သတင္းအျဖစ္ ထုတ္လႊင့္ခဲ့ရာ၌ ၎ေရဒီယိုဌာနသည္ ျမန္မာသံအမတ္ႀကီး၏ ေျဖၾကားခ်က္ အသံမွတ္တမ္းကို ေသးငယ္သည့္ အစိတ္အပိုင္းမ်ားအျဖစ္ ျဖတ္ေတာက္၍ ယင္းတို႔အနက္ မူရင္းအသံအခ်ဳိ႕ကိုသာ ေဖာ္ျပလ်က္ ဟီးဘ႐ူးဘာသာသို႔ ျပန္ဆိုကာ သံအမတ္ႀကီး၏ ေၾကညာခ်က္သဖြယ္ ထုတ္လႊင့္ခဲ့ေၾကာင္း သံ႐ုံး၏ ရွင္းလင္းမႈတြင္ ပါ၀င္သည္။

ျမန္မာသံ႐ုံး၏ ရွင္းလင္းခ်က္တြင္ အမွန္အားျဖင့္ အဆိုပါေမးျမန္းမႈသည္ သာမန္ အေမး၊ အေျဖ ပုံစံမ်ဳိး ျဖစ္ေသာ္လည္း ၎တို႔အေနျဖင့္ ၎တို႔၏ သေဘာဆႏၵအရ ျဖတ္ေတာက္ျပင္ဆင္မႈမ်ား ျပဳလုပ္ခဲ့သည္ျဖစ္ရာ ဘာသာျပန္ဆိုရာမွ အဓိပၸာယ္ လြဲမွားသည့္ ျဖစ္ေလ့ျဖစ္ထရွိေသာ သေဘာအရ ယင္းအစီအစဥ္ႏွင့္ ပတ္သက္၍ အဓိပၸာယ္နားလည္မႈ လြဲမွားျခင္းမ်ား ျဖစ္ေပၚလာခဲ့ေၾကာင္း၊ အေမးအေျဖကို တယ္လီဖုန္းမွတစ္ဆင့္ ျပဳလုပ္ခဲ့သည့္အျပင္ မိခင္ဘာသာစကား မဟုတ္သည့္ အဂၤလိပ္ဘာသာျဖင့္ ေျဖၾကားခဲ့သည့္ ျမန္မာသံအမတ္ႀကီး၏ အသံထြက္၊ ေလယူေလသိမ္းတို႔အေပၚ ၎တို႔အေနျဖင့္ ဘာသာျပန္ဆိုရာတြင္ “During my time, there isn’t a new, another contract. According to my knowledge,…. Myanmar Government’s procurement from your country never involve in Rakhine issue.” ဆိုသည့္ ေျပာၾကားခ်က္အား “there isn’t a new, another contract” ဆိုသည့္ေနရာတြင္ “there is a new, another contract” ဟု ထင္ျမင္ခဲ့ၿပီး ယင္းအဓိပၸာယ္အတိုင္း လြဲမွားစြာ ထုတ္လႊင့္ေဖာ္ျပခဲ့ရာ အျခားသတင္းမီဒီယာ အခ်ဳိ႕ကလည္း မူလထုတ္လႊင့္သည့္ GLZ ေရဒီယို၏ ဟီးဘ႐ူးဘာသာျပန္ဆို တင္ဆက္စဥ္ လြဲမွားေနသည့္ ယင္းစာသားကို ရည္ညႊန္းကူးယူ ေဖာ္ျပလ်က္ သတင္းအျဖစ္ ထပ္ဆင့္ေဖာ္ျပမႈမ်ား ရွိလာခဲ့ေၾကာင္း၊ သို႔ရာတြင္ ယင္းအသံဖိုင္ မွတ္တမ္းကို ႏုိ၀င္ဘာ ၃၀ ရက္ ညေနပိုင္းတြင္မွ လက္ခံရရွိခဲ့ၿပီး ယင္းေန႔တြင္ပင္ ျပန္လည္နားေထာင္ ဆန္းစစ္ခဲ့ရာမွ ယခုလြဲမွားမႈကို အေျဖရွာနိုင္ခဲ့ျခင္းျဖစ္ေၾကာင္း ေဖာ္ျပပါရွိသည္။

ျမန္မာႏုိင္ငံကုိ လြန္ခဲ့သည့္ လအတန္ၾကာကတည္းက လက္နက္တင္ပုိ႔ေရာင္းခ်မႈ မရွိေတာ့ေၾကာင္း အစၥေရး ႏုိင္ငံျခားေရး ၀န္ႀကီးဌာနက ႏုိ၀င္ဘာ ၃၀ ရက္တြင္ ထုတ္ျပန္ခဲ့ၿပီး အစၥေရးႏုိင္ငံဆုိင္ရာ ျမန္မာသံမတ္ႀကီး  ဦးေမာင္ေမာင္လင္းက ေရဒီယုိအင္တာဗ်ဴး၌ ေျဖၾကားခဲ့သည့္ လက္နက္တင္ပုိ႔ေရာင္းခ်မႈႏွင့္ ပတ္သက္သည့္ ေျပာၾကားခ်က္မ်ားကုိ ႐ုပ္သိမ္းခဲ့ၿပီး ေတာင္းပန္ခဲ့သည္ဟု အစၥေရး ႏုိင္ငံျခားေရး ၀န္ႀကီးဌာန အာရွႏွင့္ ပစိဖိတ္ ေဒသဆုိင္ရာ လက္ေထာက္ညႊန္ၾကားေရမွဴးခ်ဳပ္ Gilad Cohen က ေျပာၾကားသည္။

အထက္ပါကိစၥႏွင့္ ပတ္သက္၍လည္း ျမန္မာသံ႐ုံး၏ ရွင္းလင္းခ်က္တြင္ အဆုိပါ အသံဖိုင္မွတ္တမ္း မရရွိမီ အခ်ိန္၌ အစၥေရး ႏုိင္ငံျခားေရး ၀န္ႀကီးဌာနက ျမန္မာသံအမတ္ႀကီးအေပၚ ဆက္သြယ္ေမးျမန္းမႈမ်ား ျပဳလုပ္ခဲ့ရာ သံအမတ္ႀကီးက မိမိအေနျဖင့္ ယခင္ရွိခဲ့သည့္ လက္နက္ေရာင္း၀ယ္မႈမ်ားကိုသာ ေျဖၾကားခဲ့ျခင္းျဖစ္ၿပီး သံအမတ္ႀကီး တာ၀န္ထမ္းေဆာင္ခဲ့သည့္ တစ္ႏွစ္ႏွင့္ ေျခာက္လ သက္တမ္းအတြင္း မည္သည့္လက္နက္ ေရာင္း၀ယ္မႈမွ် မရွိခဲ့ေၾကာင္းကုိ ေျဖၾကားခဲ့ျခင္းျဖစ္ေၾကာင္း ျပန္လည္ရွင္းလင္း ေျပာၾကားခဲ့ေၾကာင္း၊ ယခင္ရွိခဲ့ၿပီးျဖစ္သည့္ လက္နက္ေရာင္း၀ယ္မႈဆိုင္ရာမ်ားႏွင့္ ပတ္သက္၍ သံအမတ္ႀကီး အေနျဖင့္ မွတ္ခ်က္ျပဳ ေျဖၾကားခဲ့မႈအေပၚ အစၥေရးႏုိင္ငံျခားေရး ၀န္ႀကီးဌာနဘက္မွ ေထာက္ျပေျပာဆိုသည္ဟု ယူဆ၍ လက္နက္ေရာင္း၀ယ္မႈႏွင့္ ပတ္သက္သည့္ မိမိ၏ ေျဖၾကားခဲ့မႈအေပၚ ေတာင္းပန္ခဲ့ၿပီး ၎မွတ္ခ်က္အား ျပန္လည္႐ုပ္သိမ္း သြားမည္ျဖစ္ေၾကာင္း သေဘာတူခဲ့ျခင္းသာ ျဖစ္ေၾကာင္း ေရးသားထားသည္။

အေသးစိတ္ ျပန္လည္စိစစ္ခ်က္အရ  အစၥေရးႏုိင္ငံျခားေရး ၀န္ႀကီးဌာနဘက္မွ ေထာက္ျပေျပာဆိုျခင္းသည္ လတ္တေလာကာလအတြင္း လက္နက္ေရာင္း၀ယ္ေရး စာခ်ဳပ္အသစ္ ခ်ဳပ္ဆိုခဲ့ျခင္းအေပၚ ျဖစ္သကဲ့သို႔ ယခုႏွစ္ ေအာက္တိုဘာလအတြင္း အစၥေရး တရား႐ုံးခ်ဳပ္မွ ျမန္မာႏုိင္ငံသို႔ လက္နက္ေရာင္းခ်ေရးႏွင့္ ပတ္သက္၍ ဆက္လက္လုပ္ေဆာင္ခြင့္ျပဳရန္ သို႔မဟုတ္ ရပ္ဆိုင္းရန္ ဆုံးျဖတ္ခ်က္အား အမ်ားျပည္သူသို႔ ခ်ျပျခင္းမျပဳရန္ ဆုံးျဖတ္ခ်က္ ခ်မွတ္ခဲ့ေသာ အေနအထားတြင္ ယခုကဲ့သို႔ လက္နက္ေရာင္း၀ယ္ေရး စာခ်ဳပ္အသစ္ ခ်ဳပ္ဆိုခဲ့သည္ဟု သံအမတ္ႀကီး ကိုယ္တိုင္ ေျဖၾကားခဲ့မႈသည္ အစၥေရးနိုင္ငံျခားေရး ၀န္ႀကီးဌာနအတြက္ ျပႆနာရွိမႈအရ ၎မွတ္ခ်က္ကို ျပန္လည္႐ုပ္သိမ္း ေစလိုျခင္းျဖစ္ေၾကာင္း သိရွိခဲ့ရေၾကာင္း ျမန္မာသံ႐ုံးက ရွင္းလင္းသည္။

ထုိ႔ျပင္ ေမးျမန္းသူကလည္း သံအမတ္ႀကီး၏ ေျဖၾကားခ်က္အေပၚ ေျပာင္းျပန္သေဘာ သက္ေရာက္သည့္ ဘာသာျပန္ဆိုမႈသည္ ၎အေနျဖင့္ မရည္ရြယ္ဘဲ ျဖစ္ေပၚခဲ့သည့္ အမွားျဖစ္ေၾကာင္း၊ ယင္းမွားယြင္းမႈမွ တစ္ဆင့္ အျခားမီဒီယာမ်ားသို႔ ပ်ံ႕ႏွံ႔သြားခဲ့ျခင္းျဖစ္ေၾကာင္း ၀န္ခံေျပာၾကားခဲ့ၿပီး ၎အေနျဖင့္ ယင္းအေျခအေနကို ျပန္လည္ျပင္ဆင္ႏုိင္ရန္အတြက္ ေဆာင္ရြက္ေပးသြားမည္ျဖစ္ေၾကာင္း သေဘာတူခဲ့ပါေၾကာင္း အစၥေရးႏုိင္ငံဆုိင္ရာ ျမန္မာသံ႐ုံးက ရွင္းလင္းေဖာ္ျပသည္။

တပ္မေတာ္ ကာကြယ္ေရးဦးစီးခ်ဳပ္ ဗိုလ္ခ်ဳပ္မွဴးႀကီး မင္းေအာင္လိႈင္ ဦးေဆာင္ေသာ ျမန္မာ့တပ္မေတာ္ ခ်စ္ၾကည္ေရး ကိုယ္စားလွယ္အဖြဲ႔သည္ ၂၀၁၅ ခုႏွစ္ စက္တင္ဘာလ အတြင္းက အစၥေရးႏိုင္ငံသုိ႔ ခ်စ္ၾကည္ေရးခရီး သြားေရာက္ခဲ့ၿပီး အဆုိပါ ခရီးစဥ္အတြင္း အစၥေရးႏုိင္ငံသမၼတ၊ ကာကြယ္ေရး၀န္ႀကီး၊ အစၥေရးတပ္မေတာ္ ကာကြယ္ေရးဦးစီးခ်ဳပ္တုိ႔ႏွင့္ သီးျခားစီေတြ႕ဆုံ ေဆြးေႏြးမႈမ်ား ျပဳလုပ္ခဲ့ကာ စစ္ေရယာဥ္အခ်ဳိ႕ ၀ယ္ယူရန္ သေဘာတူညီခဲ့ေၾကာင္း The Times of Israel သတင္း၌ ႏုိ၀င္ဘာ ၃၀ ရက္က ေဖာ္ျပခဲ့သည္။

ျမန္မာႏုိင္ငံသုိ႔ အစၥေရးႏုိင္ငံမွ လက္နက္တင္ပုိ႔ေရာင္းခ်ေနမႈႏွင့္ ပတ္သက္ၿပီး ၿဗိတိန္အြန္လုိင္းသတင္းစာ Independent ကလည္း လူ႔အခြင့္အေရး ေစာင့္ၾကည့္ေရးအဖြဲ႕ အမ်ားအျပား၏ စုံစမ္းေဖာ္ထုတ္မႈအရ အစၥေရး လက္နက္ကုမၸဏီမ်ားသည္ ၿပီးခဲ့သည့္ႏွစ္မ်ား အတြင္းက ျမန္မာအစုိးရသုိ႔ နယ္စပ္တြင္အသုံးျပဳရန္ တင့္ကား ၁၀၀ ေက်ာ္၊ စစ္ေရယာဥ္မ်ားႏွင့္ အေပါ့စား လက္နက္မ်ားကုိ ေရာင္းခ်ခဲ့ေၾကာင္း ေဖာ္ျပခဲ့သည္။

အထူးသျဖင့္ အဆုိပါ အစၥေရးလက္နက္ ကုမၸဏီမ်ားအနက္ စစ္ဘက္ႏွင့္ ရဲတပ္ဖြဲ႕သုံး လက္နက္ပစၥည္းမ်ား ေရာင္းခ်ျခင္းႏွင့္ သင္တန္းေပးျခင္းမ်ား ျပဳလုပ္သည့္ TAR Ideal Concepts ကုမၸဏီသည္ ပဋိပကၡမ်ား ျဖစ္ပြားေနသည့္ ရခုိင္ျပည္နယ္ေျမာက္ပုိင္းတြင္ ျမန္မာ့တပ္မေတာ္ အထူးတပ္ဖြဲ႕၀င္မ်ားကုိ သင္တန္းေပးျခင္းမ်ား ေပးေနေၾကာင္း ေဖာ္ျပခဲ့သည္။

ထုိ႔ျပင္ Aljazeera သတင္းဌာန၏ စက္တင္ဘာ ၁၆ ရက္ သတင္းေဖာ္ျပမႈတြင္လည္း ျမန္မာႏုိင္ငံသုိ႔ လက္နက္ေရာင္းခ်သည့္ ႏုိင္ငံမ်ားထဲတြင္ အစၥေရးႏိုင္ငံပါ၀င္ၿပီး ျမန္မာ့တပ္မေတာ္သုိ႔ သံခ်ပ္ကာကားမ်ား၊ အေျမာက္မ်ား ေရာင္းခ်ထားသည္ဟု ေဖာ္ျပထားသည္။

အလားတူ ၿဗိတိန္ႏွင့္ အေမရိကန္ျပည္ေထာင္စုတို႔က ဘဂၤါလီမြတ္စလင္ (မူရင္းတြင္ ႐ိုဟင္ဂ်ာဟု သုံးႏႈန္းထား) အေရးႏွင့္ စပ္လ်ဥ္းၿပီး ျမန္မာႏိုင္ငံႏွင့္ စစ္ေရးပူးေပါင္းေဆာင္ရြက္မႈ ဆုိင္းငံ့လိုက္ေသာ္လည္း ၾသစေၾတးလ် အေနျဖင့္မူ ပိတ္ပင္ရန္အတြက္ အစီအစဥ္မရွိေၾကာင္း www.huffington-post.com.au ၀က္ဘ္ဆိုက္တြင္ ေဖာ္ျပထားသည္။ ေအာက္တိုဘာ ၁၆ ရက္တြင္ ဥေရာပႏိုင္ငံျခားေရး ၀န္ႀကီးမ်ားက ျမန္မာ့ထိပ္တန္း တပ္မေတာ္ ေခါင္းေဆာင္မ်ားကို လာေရာက္ရန္ ဖိတ္ၾကားျခင္းမ်ားအား ဆုိင္းငံ့ထားရန္ သေဘာတူခဲ့ၾကသည္။  </string>

    <string name="title_news_by_category">News by Category</string>
    <string name="news_type">headlines</string>
    <string name="news_type_time"> 07:43 PM </string>
    <string name="upload_time"> 6h </string>


    <string name="news_title_1"><font fgcolor="#304c9b">Daca must stay</font> / <font fgcolor="#2d2727">Judge blocks Trump move to end program for immigrants</font></string>
    <string name="news_intro"><font fgcolor="#304c9b"> 'I'll take the heat'</font> / <font fgcolor="#2d2727">Trump touts 'bill of love' for Dreamers</font></string>
    <string name="news_title_2"><font fgcolor="#304c9b"> Exclusive </font> / <font fgcolor="#2d2727">US to loosen nuclear weapons policy raising fears of nuclear war</font></string>
    <string name="news_title_3"><font fgcolor="#304c9b"> California </font> / <font fgcolor="#2d2727">At least a dozen killed after the rains pound Santa Barbara</font></string>
    <string name="text_news"><font fgcolor="#304c9b"> James Franco </font> / <font fgcolor="#2d2727">Actor denies sexual misconduct claims in Colbert interview</font></string>


</resources>
