<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/view_bar_root_top"
        />



    <TextView
        android:id="@+id/tv_news_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_bar_root_top"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        android:fontFamily="serif"
        android:text="@string/news_type"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_news_type_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tv_news_type"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="12dp"
        android:drawableStart="@drawable/ic_access_time_black_24dp"
        android:text="@string/news_type_time" />



    <android.support.v7.widget.CardView
        android:id="@+id/cv_news_brief_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/tv_news_type_time"
        android:layout_alignStart="@id/tv_news_type"
        android:layout_below="@id/tv_news_type"
        android:layout_marginTop="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"
                android:id="@+id/view_bar_main_top"
              />

            <TextView
                android:id="@+id/tv_news_title_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_bar_main_top"
                android:text="@string/news_title_1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_upload_time_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/tv_news_title_1"
                android:layout_below="@+id/tv_news_title_1"
                android:layout_marginTop="11dp"
                android:drawableStart="@drawable/ic_access_time_black_24dp"
                android:text="@string/upload_time" />

            <ImageView
                android:id="@+id/iv_news_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_upload_time_1"
                android:scaleType="centerCrop"
                android:src="@drawable/img_news_1" />


            <TextView
                android:id="@+id/tv_question_and_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tv_news_title_1"
                android:layout_below="@id/iv_news_1"
                android:text="@string/news_intro"
                android:textSize="18sp" />



            <!--<android.support.v7.widget.RecyclerView-->
            <!--android:id="@+id/rv_intro"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@id/iv_news_1" />-->


        </RelativeLayout>


    </android.support.v7.widget.CardView>


    <LinearLayout
        android:id="@+id/ll_sub_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/cv_news_brief_1"
        android:layout_alignStart="@id/cv_news_brief_1"
        android:layout_below="@id/cv_news_brief_1"
        android:orientation="horizontal"
        android:weightSum="2">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_news_brief_2"
            android:layout_width="wrap_content"
            android:layout_height="190dp"
            android:layout_gravity="top|start"
            android:layout_margin="12dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/tv_news_title_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news_title_2" />

                <TextView
                    android:id="@+id/tv_upload_time_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/tv_news_title_2"
                    android:layout_below="@+id/tv_news_title_2"
                    android:layout_marginTop="11dp"
                    android:drawableStart="@drawable/ic_access_time_black_24dp"
                    android:gravity="center|start"
                    android:text="@string/upload_time" />


                <ImageView
                    android:id="@+id/iv_news_2"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_below="@id/tv_upload_time_2"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_news_1" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/cv_news_brief_3"
            android:layout_width="wrap_content"
            android:layout_height="190dp"
            android:layout_gravity="top|end"
            android:layout_margin="12dp"
            android:layout_weight="1">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/tv_news_title_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news_title_3" />

                <TextView
                    android:id="@+id/tv_upload_time_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/tv_news_title_3"
                    android:layout_below="@+id/tv_news_title_3"
                    android:layout_marginTop="11dp"
                    android:drawableStart="@drawable/ic_access_time_black_24dp"
                    android:gravity="center|start"
                    android:text="@string/upload_time" />


                <ImageView
                    android:id="@+id/iv_news_3"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_below="@id/tv_upload_time_3"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_news_1" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>

    <!--<android.support.v7.widget.RecyclerView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:id="@+id/rv_text_news"-->
    <!--android:layout_below="@id/ll_sub_news">-->

    <!--</android.support.v7.widget.RecyclerView>-->

    <android.support.v7.widget.CardView
        android:id="@+id/cv_text_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_sub_news">

        <View
            android:id="@+id/view_bar_top"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#397f83" />

        <TextView
            android:id="@+id/tv_text_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_bar_top"
            android:layout_margin="8dp"
            android:text="@string/text_news" />


    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cv_text_news">


        <View
            android:id="@+id/view_bar_top_2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#397f83" />

        <TextView
            android:id="@+id/tv_text_news_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_bar_top_2"
            android:layout_margin="8dp"
            android:text="@string/text_news" />


    </android.support.v7.widget.CardView>


</RelativeLayout>